[package]
name = "blurry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT OR Zlib"
description = "SDF font asset generation"
repository = "https://github.com/geeklint/blurry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunch = "0.5.3"
ttf-parser = "0.18.1"

[dev-dependencies]
png = "0.17.7"
glutin = "0.29.1"
glow = "0.12.1"